<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="36dp"
    android:weightSum="1"
    android:background="@color/background_color"
    android:orientation="vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/login_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:baselineAligned="false"
        android:weightSum="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/phone_number_ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/login_phone_number_text"/>

            <View
                android:id="@+id/phone_number_underline"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/login_type_selected"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_id_ll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/login_email_id_text"/>

            <View
                android:id="@+id/email_id_underline"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/login_type_not_selected"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/background_login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_id_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="14sp"
            android:autofillHints="@null"
            android:textColorHint="@color/hint_color"
            android:hint="@string/login_hint_email"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/background_login_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@null"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColorHint="@color/hint_color"
            android:hint="@string/login_hint_password"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:text="@string/login_find_password_message"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>

    <Button
        style="@style/LoginButton"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"/>

</LinearLayout>